--- a/health-tracker-app/package.json
+++ b/health-tracker-app/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.2",
+    "apexcharts": "^4.4.0",
+    "chart.js": "^4.4.7",
     "health-tracker-app": "file:",
+    "ng-apexcharts": "^1.15.0",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.2",
@@ -30,6 +33,7 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
