--- a/health-tracker-app/package.json
+++ b/health-tracker-app/package.json
@@ -11,12 +11,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.2",
     "apexcharts": "^4.4.0",
@@ -24,7 +20,6 @@
     "health-tracker-app": "file:",
     "ng-apexcharts": "^1.15.0",
     "postcss": "^8.5.1",
-    "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -32,15 +27,21 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
+    "@angular/common": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
+    "@angular/core": "^19.1.4",
+    "@angular/platform-browser": "^19.1.4",
+    "@angular/platform-browser-dynamic": "^19.1.4",
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
+    "jasmine": "^5.5.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rxjs": "^7.8.1",
     "typescript": "~5.7.2"
   }
 }
